tests/error/this_static.gw
// [contains] keyword 'this' cannot be used inside static functions
class C
{
  static fun  void test(){ <<<this>>>; }
}
